Fixed Alignment of Cards

--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -69,7 +69,7 @@
   content: "";
   height: 10px;
   width: 10px;
-  box-shadow: 0 0 1px 3px rgba(103,58,183,1);
+  box-shadow: 0 0 1px 3px #f26522!important;
   border-radius: 50%;
   outline: none;
 }
